  107.  [func]       zhang likun
	Remove the parameter 'db_file' for command 'retransfer' of
	xfrin module. xfrin.spec will not be generated by script.
	(Trac #329, r3171)

  106.  [bug]       zhang likun
	When xfrin can't connect with one zone's master, it should tell
	the bad news to zonemgr, so that zonemgr can reset the timer for
	that zone. (Trac #329, r3170)

  105.  [bug]       Michal Vaner
	Python processes: they no longer take 100% CPU while idle
	due to a busy loop in reading command session in a nonblocking way.
	(Trac #349, svn r3153)

  104.	[bug]		jerry
	bin/zonemgr: zonemgr should be attempting to refresh expired zones.
	(Trac #336, r3139)
				   
  103.	[bug]		jerry
	lib/python/isc/log: Fixed an issue with python logging,
	python log shouldn't die with OSError.(Trac #267, r3137)
				   
  102.	[build]		jinmei
	Disable threads in ASIO to minimize build time dependency.
	(Trac #345, r3100)

  101.	[func]		jinmei
	src/lib/dns: Completed Opcode and Rcode implementation with more
	tests and documentation.  API is mostly the same but the
	validation was a bit tightened. (Trac #351, svn r3056)

  100.  [func]      Michal Vaner
	Python processes: support naming of python processes so
	they're not all called python3.
	(Trac #322, svn r3052)

  99.	[func]*		jinmei
	Introduced a separate EDNS class to encapsulate EDNS related
	information more cleanly.  The related APIs are changed a bit,
	although it won't affect most of higher level applications.
	(Trac #311, svn r3020)

  98.	[build]		jinmei
	The ./configure script now tries to search some common include
	paths for boost header files to minimize the need for explicit
	configuration with --with-boost-include. (Trac #323, svn r3006)

  97.	[func]		jinmei
	Added a micro benchmark test for query processing of b10-auth.
	(Trac #308, svn r2982)

  96.	[bug]		jinmei
	Fixed two small issues with configure: Do not set CXXFLAGS so that
	it can be customized; Make sure --disable-static works.
	(Trac #325, r2976)
